--- a/with-puppeteer/Dockerfile
+++ b/with-puppeteer/Dockerfile
@@ -1,4 +1,4 @@
-FROM zenika/alpine-chrome:with-node
+FROM zenika/alpine-chrome:124-with-puppeteer-xvfb
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD 1
 ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/chromium-browser
