--- a/with-puppeteer/package.json
+++ b/with-puppeteer/package.json
@@ -20,6 +20,7 @@
     "chrome-launcher": "^1.1.1",
     "chrome-remote-interface": "^0.33.0",
     "cli-color": "^2.0.4",
+    "crawlee": "^3.10.1",
     "fastify": "^4.0.0",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
