--- a/with-puppeteer/package.json
+++ b/with-puppeteer/package.json
@@ -22,6 +22,7 @@
     "cli-color": "^2.0.4",
     "crawlee": "^3.10.1",
     "fastify": "^4.0.0",
+    "lodash": "^4.17.21",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
     "puppeteer": "^18.0.5",
